# tb-cad-integration

./: CITATION.cff  README.md
code/_mlx/: .env.dist  .gitignore  INSTRUCTIONS.md  README.md  pyproject.toml  requirements.txt
code/_mlx/docs/: README.md
code/_mlx/docs/image_classification/: README.md  experimental_blocks.md
code/_mlx/docs/object_detection/: README.md
code/_mlx/docs/segmentation/: README.md
code/_mlx/mlx/: __main__.py  cli.py
code/_mlx/mlx/core/: __init__.py  exceptions.py  random.py  ui.py
code/_mlx/mlx/modes/image_classification/: __init__.py  data.py  evaluation.py  inference.py  presentation.py  runner.py  train.py  utils.py
code/_mlx/mlx/modes/image_classification/models/: __init__.py  base.py  blocks.py  drax_mobilenet.py  draxnet.py  lighttbnet.py  siamese_lenet.py  standard.py
code/_mlx/mlx/modes/object_detection/ultralytics/: __init__.py  adapters.py  conversion.py  inference.py  runner.py  training.py  utils.py
code/_mlx/mlx/modes/segmentation/: __init__.py  data.py  inference.py  presentation.py  runner.py  train.py  utils.py
code/_mlx/notebooks/: 3_class_TB_Image_Classification.ipynb  Intel_Image_Classification.ipynb
code/classification/flipr/: .gitignore  README.md  pyproject.toml  run.sh
code/classification/flipr/experiments/configs/: default.yaml
code/classification/flipr/results/: NOTES.md  confusion_matrix.csv  metrics.csv  predictions.csv  who_metrics.csv
code/classification/flipr/scripts/: check_data.py  evaluate.py  train.py
code/classification/flipr/src/tb_classifier/: config.py
figures/: paper_style.py
(+294 files in other folders)
