[project]
name = "tb-classifier"
version = "0.1.0"
description = "Custom TB detection classifier for the ALIVE implementation"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "lightning",
    "torchmetrics",
    "albumentationsx",
    "opencv-python-headless",
    "pillow",
    "pydicom",
    "numpy",
    "scikit-learn",
    "pyyaml",
    "tensorboard",
    "wandb",
    "tqdm",
    "einops>=0.8.2",
]

[dependency-groups]
dev = [
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tb_classifier"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
